--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "bin":"index.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/akashdeepgoel/Package-Hunt"
