--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "bin":"index.js",
+  "bin": "index.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/akashdeepgoel/Package-Hunt"
@@ -18,7 +18,7 @@
   },
   "files": [
     "index.js",
-    "search.js",
+    "search.js"
   ],
   "keywords": [
     "library search",
@@ -29,7 +29,9 @@
   ],
   "dependencies": {
     "request": "^2.55.0",
-    "prompt": "^0.2.14"
+    "prompt": "^0.2.14",
+    "cheerio": "*",
+    "request-promise": "*"
   },
   "author": "Akashdeep Goel",
   "license": "ISC",
